Fixed cart on mobile, fixed back arrow on details section

--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -2225,6 +2225,10 @@ html {
   font-size: 3rem;
 }
 
+.m-1{
+  margin: 0.25rem;
+}
+
 .mx-5{
   margin-left: 1.25rem;
   margin-right: 1.25rem;
@@ -2237,10 +2241,6 @@ html {
 
 .mb-0{
   margin-bottom: 0;
-}
-
-.ml-0{
-  margin-left: 0;
 }
 
 .mr-2{
@@ -2263,8 +2263,8 @@ html {
   margin-bottom: 1rem;
 }
 
-.mt-10{
-  margin-top: 2.5rem;
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .ml-10{
@@ -2283,10 +2283,6 @@ html {
   max-height: 13rem;
 }
 
-.max-w-2xl{
-  max-width: 42rem;
-}
-
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -2302,6 +2298,14 @@ html {
   outline-offset: 2px;
 }
 
+.p-1{
+  padding: 0.25rem;
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
 .p-4{
   padding: 1rem;
 }
@@ -2310,9 +2314,18 @@ html {
   padding: 2rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.pt-0{
+  padding-top: 0;
 }
 
 .pb-0{
@@ -2321,10 +2334,6 @@ html {
 
 .pb-4{
   padding-bottom: 1rem;
-}
-
-.pr-6{
-  padding-right: 1.5rem;
 }
 
 .pointer-events-none{
@@ -2393,6 +2402,10 @@ html {
 
 .w-1\/2{
   width: 50%;
+}
+
+.w-2\/5{
+  width: 40%;
 }
 
 .w-full{
@@ -5097,29 +5110,13 @@ html {
     justify-content: center;
   }
 
-  .md\:float-left{
-    float: left;
-  }
-
-  .md\:float-none{
-    float: none;
-  }
-
   .md\:my-20{
     margin-top: 5rem;
     margin-bottom: 5rem;
   }
 
-  .md\:mt-0{
-    margin-top: 0;
-  }
-
   .md\:mr-12{
     margin-right: 3rem;
-  }
-
-  .md\:ml-72{
-    margin-left: 18rem;
   }
 
   .md\:max-h-64{
@@ -5132,10 +5129,6 @@ html {
 
   .md\:max-w-3xl{
     max-width: 48rem;
-  }
-
-  .md\:p-0{
-    padding: 0;
   }
 
   .md\:pt-0{
@@ -5156,14 +5149,6 @@ html {
 
   .md\:w-2\/3{
     width: 66.666667%;
-  }
-
-  .md\:w-1\/4{
-    width: 25%;
-  }
-
-  .md\:w-3\/4{
-    width: 75%;
   }
 
   .md\:w-3\/5{
@@ -6438,14 +6423,6 @@ html {
 
   .lg\:w-1\/2{
     width: 50%;
-  }
-
-  .lg\:w-1\/3{
-    width: 33.333333%;
-  }
-
-  .lg\:w-2\/3{
-    width: 66.666667%;
   }
 }
 
